2018-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Compare template requires-clauses for C++ < 20.
	* pt.c (template_requirements_equivalent_p): New. Factored out of
	template_heads_equivalent_p.
	(template_heads_equivalent_p): Compare requires-clauses in both
	paths.

2018-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Don't warn on abbreviated templates for C++ < 20.
	* parser.c (cp_parser_maybe_constrained_type_specifier): Update warning
	condition.

2019-01-10  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Fix crashes when using function concepts and generalized auto.
	* constraint.cc (placeholder_extract_concept_and_args): The check
	can be a call expression. Use new facilities to unpack it.
	* pt.c (do_auto_deduction): Extract the function concept correctly;
	rename constr to check to reflect the kind of node.

2019-01-08  Andrew Sutton  <andrew.n.sutton@gmail.com>

	* constraint.cc (satisfy_check): Don't rebuild multi-level template
	arguments; we shouldn't need them after substituting through the
	check arguments.
	(satisfy_expression): Formatting.
	(evaluate_concept): Use build_concept_check instead of build_nt.
	(evaluate_function_concept): Use build_concept_check instead of
	build_nt.
	(rebuild_template_arguments): New.
	(get_normalized_constraints_from_decl): Rebuild the arguments
	when getting them from a decl; don't use the full set of instantiation
	arguments since that gives the wrong values.
	* cp-tree.h (template_parms_to_args): Declare.
	* pt.c (template_parms_to_args): Make extern.
	* parser.c (cp_parser_template_id): Remove dead case.
	* semantics.c (finish_id_expression): Move handling of concept checks
	into the main series of variable checks.

2018-12-21  Andrew Sutton  <andrew.n.sutton@gmail.com>

	Unify handling for standard, variable, and function concepts.
	* call.c (build_new_function_call): Don't evaluate concepts here.
	* constraint.cc (unpack_concept_check): Just return the template-id.
	(resolve_constraint_check): Renamed.